// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component <PatientAccessDisclaimerModal /> should renders mount correctly 1`] = `
<PatientAccessDisclaimerModal
  history={
    Object {
      "push": [Function],
    }
  }
>
  <Modal
    animation={true}
    autoFocus={true}
    backdrop={true}
    bsClass="modal"
    dialogComponentClass={[Function]}
    enforceFocus={true}
    keyboard={true}
    manager={
      ModalManager {
        "add": [Function],
        "containers": Array [],
        "data": Array [],
        "handleContainerOverflow": true,
        "hideSiblingNodes": true,
        "isTopModal": [Function],
        "modals": Array [],
        "remove": [Function],
      }
    }
    onHide={[Function]}
    renderBackdrop={[Function]}
    restoreFocus={true}
    show={false}
  >
    <Modal
      autoFocus={true}
      backdrop={true}
      backdropClassName="modal-backdrop"
      backdropTransitionTimeout={150}
      containerClassName="modal-open"
      dialogTransitionTimeout={300}
      enforceFocus={true}
      keyboard={true}
      manager={
        ModalManager {
          "add": [Function],
          "containers": Array [],
          "data": Array [],
          "handleContainerOverflow": true,
          "hideSiblingNodes": true,
          "isTopModal": [Function],
          "modals": Array [],
          "remove": [Function],
        }
      }
      onEntering={[Function]}
      onExited={[Function]}
      onHide={[Function]}
      renderBackdrop={[Function]}
      restoreFocus={true}
      show={false}
      transition={[Function]}
    />
  </Modal>
</PatientAccessDisclaimerModal>
`;

exports[`Component <PatientAccessDisclaimerModal /> should renders shallow correctly 1`] = `
<Modal
  animation={true}
  autoFocus={true}
  backdrop={true}
  bsClass="modal"
  dialogComponentClass={[Function]}
  enforceFocus={true}
  keyboard={true}
  manager={
    ModalManager {
      "add": [Function],
      "containers": Array [],
      "data": Array [],
      "handleContainerOverflow": true,
      "hideSiblingNodes": true,
      "isTopModal": [Function],
      "modals": Array [],
      "remove": [Function],
    }
  }
  onHide={[Function]}
  renderBackdrop={[Function]}
  restoreFocus={true}
  show={false}
>
  <div
    className="panel panel-secondary without-margin"
  >
    <div
      className="panel-heading"
    >
      <h3
        className="panel-title"
      >
        Patient Access Disclaimer
      </h3>
    </div>
    <div
      className="panel-body"
    >
      <div
        className="panel-body-inner"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed nec lobortis elit. Aenean mi nunc, feugiat ut aliquet non, iaculis vel tellus. Donec semper felis placerat, posuere nisi a, suscipit turpis. Integer sit amet lacus pellentesque, vestibulum libero id, sagittis nisi. Phasellus eleifend, neque eget vulputate semper, enim dui dictum neque, non iaculis felis augue at nunc.
      </div>
      <div
        className="panel-control"
      >
        <div
          className="wrap-control-group hide-indent-bottom"
        >
          <div
            className="control-group with-indent right"
          >
            <button
              className="btn btn-danger btn-icon-normal"
            >
              <i
                className="btn-icon fa fa-ban"
              />
               
              <span
                className="btn-text"
              >
                Decline
              </span>
            </button>
            <button
              className="btn btn-success"
              onClick={[Function]}
            >
              <span
                className="btn-text"
              >
                Agree
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</Modal>
`;
